# qt-solutions

./: .gitignore
qtservice/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  QtService.sln  QtService.vcxproj  QtService.vcxproj.filters  cmake_install.cmake  qtservice.cpp  qtservice.h  qtservice_export.h  qtservice_win.cpp
